$Id$

2019-12-28  Christian Franke  <franke@computer.org>

	do_release: Update code signing key id.

2019-12-13  Christian Franke  <franke@computer.org>

	smartd.conf.5.in: Fix very old comment about man2html bug.

	smartctl.8.in, smartd.conf.5.in, update-smart-drivedb.8.in:
	Remove EXPERIMENTAL notes for features added before 6.6.
	Fix typos.

	update-smart-drivedb.in: If signature verification fails, always
	print GPG error message regardless of '-v' option.

	os_win32.cpp: Decode Windows 10 1909 and Server 1909 build number.
	Fix IRST version in comment.

2019-12-10  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h: Fix SanDisk SSD Plus matching pattern (GH PR 43)

2019-12-06  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Hitachi Ultrastar A7K1000: HITACHI* variant (#1255)
	- Seagate IronWolf: *0008 variant (#1262)
	- WD Blue and Green SSDs: *2G* variant, allow extra space
	- USB: Unknown (0x0850:0x0031)
	- USB: ADATA (0x125f:0xa37a) (#1264)

2019-12-06  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h:
	- Extend Micron 5100 attributes (#1270)

2019-12-05  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h:
	- Add Toshiba MQ04UBD200 (#1106)
	- Add LITEON LCH SSD (#1124)

2019-12-04  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h:
	- hynix SC311 SSD (#1267)
	- Seagate Mobile HDD (#1118)
	- Kingston SSDNow UV400 (#848, GH: 7)
	- Add another PM841 definition (GH: 30)
	- Add Seagate Barracuda Pro Compute family
	- Extend WD Blue regexp
	- Extend Seagate Mobile HDD regexp
	- Add Seagate Exos X14

2019-11-24  Christian Franke  <franke@computer.org>

	Add '-d jmb39x,N[,sLBA][,force][+TYPE]' device type for SATA drives
	behind a JMicron JMB39x RAID port multiplier (#705).
	dev_jmb39x_raid.cpp: New file, based on JMraidcon by Werner Johansson.
	dev_interface.cpp: Parse '-d jmb39x*[+TYPE]' option.
	dev_interface.h: Add get_jmb39x_device().
	smartctl.8.in, smartd.conf.5.in: Document new option.
	Makefile.am, os_win32/vc14/smart*.vcxproj*: Add new file.
